turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:3: error: Invalid literal number
for (j<-1to 9) {
        ^Source:17: error: ')' expected but '}' found.
}
^